[REFACTOR] improve code readability and consistency in Post and Category classes